##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_mirtarbase
version = 0.2.3-dev
description = A package for converting miRTarBase to BEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/mirtarbase
download_url = https://github.com/bio2bel/mirtarbase/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/mirtarbase/issues
    Source Code = https://github.com/bio2bel/mirtarbase
    Documentation = https://bio2bel.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Systems Biology
    Networks Biology
    MicroRNA
    MiRNA

[options]
install_requires =
    pybel>=0.14.0,<0.15.0
    bio2bel>=0.3.0,<0.4.0
    bio2bel_hgnc>=0.3.0
    bio2bel_entrez>=0.3.0
    bio2bel_mirbase>=0.3.0


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flask-admin
    flask-bootstrap
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel-mirtarbase = bio2bel_mirtarbase.cli:main
bio2bel =
    mirtarbase = bio2bel_mirtarbase

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_mirtarbase
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bio2bel
    .tox/*/lib/python*/site-packages/bio2bel_mirtarbase

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
